[gd_scene load_steps=4 format=3 uid="uid://xkp68736u68b"]

[ext_resource type="Script" path="res://src/scripts/zoneMap.gd" id="1_tcm84"]
[ext_resource type="Theme" uid="uid://b6p8j7c4j0sqo" path="res://src/themes/menu.tres" id="3_e2dny"]
[ext_resource type="Texture2D" uid="uid://c343nr6s70c2c" path="res://src/images/zone1.jpg" id="3_l1gle"]

[node name="zoneMap" type="VBoxContainer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 95.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_e2dny")
theme_override_constants/separation = 15
script = ExtResource("1_tcm84")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("3_l1gle")
expand_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Zone1" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Principal zone
"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Zone2" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Zone 2
"

[node name="Zone3" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Zone 3"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Zone4" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Zone 4"

[node name="Zone5" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Zone 5"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Zone6" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Zone 6"

[node name="Zone7" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Zone 7"

[connection signal="pressed" from="VBoxContainer/Zone1" to="." method="_on_zone_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Zone2" to="." method="_on_zone_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Zone3" to="." method="_on_zone_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Zone4" to="." method="_on_zone_4_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Zone5" to="." method="_on_zone_5_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer4/Zone6" to="." method="_on_zone_6_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer4/Zone7" to="." method="_on_zone_7_pressed"]
